--- a/src/main/resources/templates/pedidoAdd.html
+++ b/src/main/resources/templates/pedidoAdd.html
@@ -1,88 +1,94 @@
 <!DOCTYPE html>
 <!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+    To change this license header, choose License Headers in Project Properties.
+    To change this template file, choose Tools | Templates
+    and open the template in the editor.
+    -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="viewport" content="width=device-width" />
-	<title>Cadastro de Pedidos</title>
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"></link>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>Cadastro de Pedidos</title>
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        </link>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet"/>
-             <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
-
         <script
-          src="https://code.jquery.com/jquery-2.2.4.min.js"
-          integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-          crossorigin="anonymous"></script>
-
+            src="https://code.jquery.com/jquery-2.2.4.min.js"
+            integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+            crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker3.standalone.min.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>     
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.min.js"></script>
         <script src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.1/js/bootstrap-datepicker.min.js'></script>
-        
         <script type="text/javascript">
             $(function () {
                 $('#datetimepicker1').datetimepicker();
             });
         </script>
-</head>
-<body>
-	<div class="panel panel-default">
-		<div class="panel-heading">
-			<strong>Cadastro de Pedidos</strong>
-		</div>
-		<div class="panel-body">
-			<form class="form-horizontal" th:object="${pedido}" th:action="@{/pedido/save}" method="POST" style="margin: 10px">
-				<div class="form-group">
- 					<fieldset>
-						<div class="form-group row">
-							<div class="alert alert-danger" th:if="${#fields.hasAnyErrors()}">
-								<div th:each="detailedError : ${#fields.detailedErrors()}">
-									<span th:text="${detailedError.message}"></span>
-								</div>
-							</div>
-						</div> 					
-						<div class="form-group row">
-						    <div class="col-md-1">
-						        <input type="text" class="form-control input-sm" id="id" th:field="*{id}" readOnly="readonly"/>
-						    </div>
-						 </div>
-						<div class="form-group row">                                                          
-							<div class="col-md-2" th:classappend="${#fields.hasErrors('dataPedido')}? 'has-error'">
-							    <label>Data do pedido</label>
-                                                            <div class="input-group date" id='datetimepicker1'>
-                                                              
-                                                                
-                                                                <input type="text" id="dataPedido" name="dataPedido"
-                                                                       value="{{ date('d/m/Y') }}"
-                                                                       class="form-control"
-                                                                       th:field="*{dataPedido}"
-                                                                       autofocus="autofocus" 
-                                                                       placeholder="Informe a data do pedido" maxlength="50"/>
-                                                                
-                                                                
-                                                                
-                                                                
-                                                                <div class="input-group-addon" >
-                                                                    <span class="glyphicon glyphicon-calendar"></span>
-                                                                 </div>
-                                                            </div>
-							</div>
-						</div>					
-					</fieldset>
-				</div>
-				<div class="form-group row">
-					<button type="submit" class="btn btn-sm btn-primary">Salvar</button>
-					<a th:href="@{/}" class="btn btn-sm btn-default">Cancelar</a>
-				</div>
-			</form>
-		</div>
-	</div>
-</body>
+    </head>
+    <body>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <strong>Cadastro de Pedidos</strong>
+            </div>
+            <div class="panel-body">
+                <form class="form-horizontal" th:object="${pedido}" th:action="@{/pedido/save}" method="POST" style="margin: 10px">
+                    <div class="form-group">
+                        <fieldset>
+                            <div class="form-group row">
+                                <div class="alert alert-danger" th:if="${#fields.hasAnyErrors()}">
+                                    <div th:each="detailedError : ${#fields.detailedErrors()}">
+                                        <span th:text="${detailedError.message}"></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-md-1">
+                                    <input type="text" class="form-control input-sm" id="id" th:field="*{id}" readOnly="readonly"/>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-md-2" th:classappend="${#fields.hasErrors('dataPedido')}? 'has-error'">
+                                    <label>Data do pedido</label>
+                                    <div class="input-group date" id='datetimepicker1'>
+                                        <input type="text" id="dataPedido" name="dataPedido"
+                                            value="{{ date('d/m/Y') }}"
+                                            class="form-control"
+                                            th:field="*{dataPedido}"
+                                            autofocus="autofocus" 
+                                            placeholder="Informe a data do pedido" maxlength="50"/>
+                                        <div class="input-group-addon" >
+                                            <span class="glyphicon glyphicon-calendar"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-md-3">
+                                    <label>Pessoa</label> 
+                                    <select class="form-control" th:field="*{pessoa}" id="pessoa">
+                                        <option th:each="pessoa : ${pessoas}" th:value="${pessoa.id}" th:text="${pessoa.nome}" selected="selected"></option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-md-1" th:classappend="${#fields.hasErrors('total')}? 'has-error'">
+                                    <label>Total</label>
+                                    <input type="text" class="form-control input-sm" th:field="*{total}" autofocus="autofocus" placeholder="0" maxlength="50" disabled="true"/>
+                                </div>
+                            </div>
+                        </fieldset>
+                    </div>
+                    <div class="form-group row">
+                        <button type="submit" class="btn btn-sm btn-primary">Salvar</button>
+                        <a th:href="@{/pedido}" class="btn btn-sm btn-default">Cancelar</a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </body>
 </html>
