--- a/src/main/resources/templates/pedidoAdd.html
+++ b/src/main/resources/templates/pedidoAdd.html
@@ -56,7 +56,6 @@
                                     <label>Data do pedido</label>
                                     <div class="input-group date" id='datetimepicker1'>
                                         <input type="text" id="dataPedido" name="dataPedido"
-                                            value="{{ date('d/m/Y') }}"
                                             class="form-control"
                                             th:field="*{dataPedido}"
                                             autofocus="autofocus" 
@@ -88,6 +87,80 @@
                         <a th:href="@{/pedido}" class="btn btn-sm btn-default">Cancelar</a>
                     </div>
                 </form>
+                
+                
+                
+                <form class="form-horizontal" action="#" th:action="@{/pedido/{id}/itens/add (id=${pedido.id})}"
+                    th:object="${item}" method="POST">
+                    <div th:if="${pedido.id != null}" class="panel panel-default" >
+                        <div class="panel-heading">Itens do pedido</div>
+                        <div class="panel-body">
+                            <div class="row" style="margin-bottom: 10px">
+                                <div class="col-sm-8">
+                                    
+                                    <label>Produto</label>
+                                    <select id="produto" class="selectOneMenu form-control input-sm" data-live-search="true"
+                                            th:field="*{produto}">
+                                        <option th:each="i : ${produtos}"
+                                                th:value="${i.id}"
+                                                th:text="${i.nome}">
+                                        </option>
+                                    </select>
+                                    
+                                    <div class="form-group row">
+                                        <div class="col-md-4">
+                                            <label>Quantidade</label>
+                                            <input type="text" class="form-control input-sm" th:field="*{quantidade}" autofocus="autofocus" placeholder="Informe a quantidade" maxlength="50"/>
+                                        </div>
+                                    </div>
+                                    
+                                    
+                                    
+                                    <div class="form-group row">
+                                        <div class="col-md-4">
+                                            <label>Valor unitário</label>
+                                            <input type="text" class="form-control input-sm" th:field="*{valorUnitario}" autofocus="autofocus" placeholder="Informe a quantidade" maxlength="50"/>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                            </div>
+                            <div class="col-sm-4">
+                                    <button style="width:100%" type="submit" class="btn btn-success btn-md">
+                                        <i class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></i>
+                                        Adicionar Item
+                                    </button>
+                                </div>
+                            <table class="table table-striped table-bordered" style="width:100%" id="detalhe">
+                                <thead>
+                                <tr>
+                                    <th>Produto</th>
+                                    <th>Quantidade</th>
+                                    <th>Valor</th>
+                                    <th>Total</th>
+                                    <th align="center" style="width: 45px; min-width: 45px">Ações</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="item : ${pedido.ItensPedido}">
+                                    <td th:text="${item.produto.id + ' - ' + item.produto.nome}"></td>
+                                    <td th:text="${item.quantidade}"></td>
+                                    <td th:text="${item.valorUnitario}"></td>
+                                    <td th:text="${item.total}"></td>
+                                    <td align="center">
+                                        <div class="btn-group">
+                                            <a class="btn btn-danger btn-xs"
+                                               th:href="@{/pedido/{id}/itens/{ItemId}/delete (id=${pedido.id}, ItemId=${item.id})}">
+                                                <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
+                                            </a>
+                                        </div>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+              </form>
             </div>
         </div>
     </body>
