--- a/src/main/resources/templates/pedidoAdd.html
+++ b/src/main/resources/templates/pedidoAdd.html
@@ -59,7 +59,7 @@
                                             class="form-control"
                                             th:field="*{dataPedido}"
                                             autofocus="autofocus" 
-                                            placeholder="Informe a data do pedido" maxlength="50"/>
+                                            placeholder="Informe a data do pedido" maxlength="50" required="true"/>
                                         <div class="input-group-addon" >
                                             <span class="glyphicon glyphicon-calendar"></span>
                                         </div>
@@ -68,9 +68,8 @@
                             </div>
                             <div class="form-group row">
                                 <div class="col-md-3">
-                                    <label>Pessoa</label> 
-                                    <select class="form-control" th:field="*{pessoa}" id="pessoa">
-                                        <option th:each="pessoa : ${pessoas}" th:value="${pessoa.id}" th:text="${pessoa.nome}" selected="selected"></option>
+                                    <label>Cliente</label> 
+                                    <select class="form-control" th:field="*{pessoa}" id="pessoa" required="true">
                                     </select>
                                 </div>
                             </div>
@@ -96,8 +95,8 @@
                         <div class="panel-heading">Itens do pedido</div>
                         <div class="panel-body">
                             <div class="row" style="margin-bottom: 10px">
+                                
                                 <div class="col-sm-8">
-                                    
                                     <label>Produto</label>
                                     <select id="produto" class="selectOneMenu form-control input-sm" data-live-search="true"
                                             th:field="*{produto}">
@@ -106,11 +105,12 @@
                                                 th:text="${i.nome}">
                                         </option>
                                     </select>
+                                    <br>
                                     
                                     <div class="form-group row">
                                         <div class="col-md-4">
                                             <label>Quantidade</label>
-                                            <input type="text" class="form-control input-sm" th:field="*{quantidade}" autofocus="autofocus" placeholder="Informe a quantidade" maxlength="50"/>
+                                            <input type="text" class="form-control input-sm" th:field="*{quantidade}" autofocus="autofocus" placeholder="Informe a quantidade" maxlength="50" required="true"/>
                                         </div>
                                     </div>
                                     
@@ -119,18 +119,23 @@
                                     <div class="form-group row">
                                         <div class="col-md-4">
                                             <label>Valor unitário</label>
-                                            <input type="text" class="form-control input-sm" th:field="*{valorUnitario}" autofocus="autofocus" placeholder="Informe a quantidade" maxlength="50"/>
+                                            <input type="text" class="form-control input-sm" th:field="*{valorUnitario}" autofocus="autofocus" placeholder="Informe a quantidade" maxlength="50" required="true"/>
+                                        </div>
+                                    </div>
+                                    
+                                    <div class="form-group row">
+                                        <div class="col-md-2">
+                                            <button style="width:100%" type="submit" class="btn btn-success btn-md">
+                                                <i class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></i>
+                                                Adicionar Item
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
                                 
                             </div>
-                            <div class="col-sm-4">
-                                    <button style="width:100%" type="submit" class="btn btn-success btn-md">
-                                        <i class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></i>
-                                        Adicionar Item
-                                    </button>
-                                </div>
+                         
+                            
                             <table class="table table-striped table-bordered" style="width:100%" id="detalhe">
                                 <thead>
                                 <tr>
@@ -150,7 +155,7 @@
                                     <td align="center">
                                         <div class="btn-group">
                                             <a class="btn btn-danger btn-xs"
-                                               th:href="@{/pedido/{id}/itens/{ItemId}/delete (id=${pedido.id}, ItemId=${item.id})}">
+                                               th:href="@{pedido/{idpedido}/itens/delete/{iditem} (idpedido=${pedido.id}, iditem=${item.id})}">
                                                 <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
                                             </a>
                                         </div>
