--- a/src/main/resources/templates/produto.html
+++ b/src/main/resources/templates/produto.html
@@ -26,7 +26,7 @@ and open the template in the editor.
 						<tr>
 							<th>Id</th>
 							<th>Nome</th>
-							<th>Quantidade</th>
+							<th>Quantidade disponível</th>
 							<th>Valor unitário</th>
 							<th></th>
 						</tr>
