alterações usuario e cadastro clientes

--- a/src/main/resources/templates/usuario.html
+++ b/src/main/resources/templates/usuario.html
@@ -33,7 +33,7 @@
                                 <td th:text="${usuario.id}"></td>
                                 <td th:text="${usuario.nome}"></td>
                                 <td th:text="${usuario.login}"></td>
-                                <td th:text="${usuario.senha}"></td>
+                                <td th:password="${usuario.senha}"></td>
                                 <!--<td th:text="${#dates.format(post.data, 'dd/MM/yyyy')}"></td>-->
                                 <td>
                                     <div class="btn-group pull-right">
