--- a/src/main/resources/templates/usuarioAdd.html
+++ b/src/main/resources/templates/usuarioAdd.html
@@ -51,7 +51,7 @@
                             <div class="form-group row">
                                 <div class="col-md-4" th:classappend="${#fields.hasErrors('senha')}? 'has-error'">
                                     <label>Senha</label> 
-                                    <input type="text" class="form-control input-sm" th:field="*{senha}" maxlength="150" placeholder="Informe sua senha"/>
+                                    <input type="password" class="form-control input-sm" th:field="*{senha}" maxlength="150" placeholder="Informe sua senha"/>
                                 </div>
                             </div>
                         </fieldset>
