substituição pessoa por cliente

--- a/src/main/resources/templates/pessoa.html
+++ b/src/main/resources/templates/pessoa.html
@@ -10,7 +10,7 @@ and open the template in the editor.
 	<meta charset="UTF-8" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width" />
-	<title>Cadastro de entidades</title>
+	<title>Cadastro de clientes</title>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"></link>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -56,7 +56,7 @@ and open the template in the editor.
 			</div>
 		</div>
 		<div class="panel-footer">
-			<a class="btn btn-sm btn-success" th:href="@{/pessoa/add/}" >Adicionar</a>
+			<a class="btn btn-sm btn-success" th:href="@{/cliente/add/}" >Adicionar</a>
 		</div>
 	</div>
 </body>
