--- a/src/main/resources/templates/pessoaAdd.html
+++ b/src/main/resources/templates/pessoaAdd.html
@@ -10,7 +10,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width" />
-        <title>Cadastro de entidades</title>
+        <title>Cadastro de clientes</title>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
         </link>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -18,10 +18,10 @@
     <body>
         <div class="panel panel-default">
             <div class="panel-heading">
-                <strong>Cadastro de entidades</strong>
+                <strong>Cadastro de clientes</strong>
             </div>
             <div class="panel-body">
-                <form class="form-horizontal" th:object="${pessoa}" th:action="@{/pessoa/save}" method="POST" style="margin: 10px">
+                <form class="form-horizontal" th:object="${pessoa}" th:action="@{/cliente/save}" method="POST" style="margin: 10px">
                     <div class="form-group">
                         <fieldset>
                             <div class="form-group row">
